<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashCard</string>
    <string name="add_card_name">FlashCard</string>
    <string name="app_title">Flash Card App</string>
    <string name="action_settings">Settings</string>
    <string name="action_import">Import</string>
    <string name="import_deck_name">Import Deck</string>
    <string name="action_new">New Package</string>
    <string name="action_open">Open Package</string>
    <string name="action_save">Save Package</string>
    <string name="action_export">Export Package</string>
    <string name="dialog_title">Name your deck</string>
    <string name="dialog_yes">Create</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_new_card_title">SetTextHere</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_export_title">Filename: </string>
    <string name="dialog_export_msg">Exported as .csv file to default downloads folder</string>
    <string name="review_question">%1$s</string>
    <string name="review_answer">%1$s</string>
    <string name="review_answer_title">Answer: </string>

    <string name="main_title">FlashCard</string>
    <string name="button_main_manage">Manage Cards</string>
    <string name="button_main_review">Review Cards</string>
    <string name="button_main_active">Active Study</string>

    <string name="review_load_heading">Pick a deck to review</string>

    <string name="button_manager_1">New Package</string>
    <string name="button_manager_2">Open Package</string>
    <string name="button_manager_3">\?????</string>

    <string name="add_card_1">Question:</string>
    <string name="add_card_2">Answer:</string>

    <string name="button_add_card_1">Previous</string>
    <string name="button_add_card_2">Next</string>
    <string name="button_add_card_3">New Card</string>
    <string name="button_add_card_4">Clear</string>
    <string name="button_add_card_5">Add/Update</string>

    <string name="button_save_1">Save</string>
    <string name="button_delete_1">Delete</string>

    <string name="button_review_1">Show Answer</string>
    <string name="button_review_2">Prev</string>
    <string name="button_review_3">Next</string>

    <string name="button_active_1">Flip</string>
    <string name="button_active_2">Correct</string>
    <string name="button_active_3">Incorrect</string>
</resources>
