<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_1"
        android:id="@+id/addCardTextView1"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addCardEditQuestion"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_2"
        android:id="@+id/addCardTextView2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addCardEditAnswer"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.50" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_card_3"
            android:id="@+id/addCardNewButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_card_4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:id="@+id/addCardClearButton" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_card_5"
            android:id="@+id/addCardAddButton"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_card_1"
            android:id="@+id/addCardPrevButton"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_card_2"
            android:id="@+id/addCardNextButton"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>