<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.khp.flashcard.app.Main" >

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_package"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_save_package"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_open"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_open_package"
        android:icon="@drawable/ic_action_collection"
        android:title="@string/action_open"
        app:showAsAction="always"/>
</menu>
